# XTools

./: .gitignore  README.md  pyproject.toml  requirement.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: build.yml
src/XTools/: __init__.py  data.py
